--- a/workshops/tfx-caip-tf23/lab-03-tfx-cicd/labs/cloudbuild.yaml
+++ b/workshops/tfx-caip-tf23/lab-03-tfx-cicd/labs/cloudbuild.yaml
@@ -43,7 +43,7 @@ steps:
   - 'ENABLE_TUNING=$_ENABLE_TUNING'
   dir: $_PIPELINE_FOLDER
 options:
-  logging: NONE
+  logging: CLOUD_LOGGING_ONLY
 
 
 # Push the custom image to Container Registry 
